tests/ui/impl-trait/precise-capturing/bad-lifetimes.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/bad-lifetimes.rs:1:39
   |
LL | fn no_elided_lt() -> impl Sized + use<'_> {}
   |                                       ^^
   |
   = note: cannot capture elided lifetime with `use<'_>` when there is no lifetime in scope to capture

error[E0261]: use of undeclared lifetime name `'missing`
  --> $DIR/bad-lifetimes.rs:7:37
   |
LL | fn missing_lt() -> impl Sized + use<'missing> {}
   |              -                      ^^^^^^^^ undeclared lifetime
   |              |
   |              help: consider introducing lifetime `'missing` here: `<'missing>`

error: expected lifetime parameter in `use<...>` precise captures list, found `'static`
  --> $DIR/bad-lifetimes.rs:4:36
   |
LL | fn static_lt() -> impl Sized + use<'static> {}
   |                                    ^^^^^^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0106, E0261.
For more information about an error, try `rustc --explain E0106`.
